--- a/views/home.pug
+++ b/views/home.pug
@@ -3,10 +3,9 @@ include mixins/videoBlock
 
 block content
     .videos
-        each item in videos
+        each video in videos
             +videoBlock({
-                id:item.id,
-                title:item.title,
-                views:item.views,
-                videoFile:item.videoFile
+                id:video.id,
+                title:video.title,
+                videoFile:video.fileUrl
             })
