--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,4 +1,11 @@
 extends layouts/main
 
 block content
-    p Video Detail
+    .video__player
+        video(src=`/${video.fileUrl}`)
+    .video__info
+        a(href=`/videos/${routes.editVideo}`)
+            button Edit Video
+        h3.video__title=video.title
+        span.video__views=video.views
+        p.video__description=video.description
